# PyScripts

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml  ci.yml
config/: app.json  history.json
docs/: algorithm.md  architecture.md  development.md
lang/: en_US.json  ja_JP.json  zh_CN.json
src/: __init__.py  cli.py  config.py  logger.py
src/gui/: __init__.py  home.py  i18n.py  main_app.py  tabs.py  theme.py  tool_page.py  widgets.py
src/gui/app/: __init__.py  data_generator.py  regex_replacer.py  table_grapher.py
src/utils/: __init__.py  data_generator.py  regex_replacer.py  table_grapher.py
tests/: conftest.py  test_data_generator.py  test_regex_replacer.py  test_table_grapher.py
